<resources>
    <string name="app_name">DonorHub</string>
    <string name="slogan">Sharing is caring</string>
    <string name="slogan1">Give a little. Help a lot.</string>
    <string name="slogan2">Small acts of kindness make a big impact.</string>
    <string name="slogan3">Donate to help those who need it most.</string>
    <string name="slogan4">Donate to help someone in need.</string>
    <string name="welcome_heading">Spread Love</string>
    <string name="log_in">Log in</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="create_account">Create\nAccount</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_it_work">HOW IT WORK?</string>
    <string name="Search">Search</string>
    <string name="food">Food</string>
    <string name="desc_1">A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles. A donation may satisfy medical needs such as blood or organs for transplant.</string>
    <string name="ngo_img">ngo_img</string>
    <string name="ngo_name">Ngo</string>
    <string name="cloths">Cloth</string>
    <string name="books">Books</string>
    <string name="gadget">Gadgets</string>
    <string name="nav_home">Home</string>
    <string name="nav_community">Community</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_share">Share</string>
    <string name="nav_version">Version</string>
    <string name="full_name">Full Name</string>
    <string name="user_name_signup">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">password</string>
    <string name="next">next</string>
    <string name="donator">Donator</string>
    <string name="ngo">NGO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_otp_again">Resend OTP again</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP</string>
    <string name="welcome_msg">Welcome to DonateNow, an innovative platform dedicated to connecting generous individuals like you with NGOs and making a positive impact on communities in need. Our mission is to simplify the donation process, promote transparency, and empower individuals to contribute to charitable causes with ease.</string>
    <string name="our_mission">At DonorHub, our mission is to bridge the gap between donors and NGOs, empowering individuals to make a difference in the lives of those in need. We aim to create a transparent and secure environment where donors can contribute to causes they are passionate about, while NGOs can access the vital support they require to create positive change.</string>
    <string name="how_it_work_1">The DonorHub app is a platform that connects individuals who wish to donate items or funds with NGOs that can distribute those donations to people in need. The app functions through a series of steps to streamline the donation process and facilitate effective communication between donors and NGOs.</string>
    <string name="ngo_name_1">Ngo Name</string>
</resources>