<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.signup.Signup"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/signup_back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:onClick="backBtn"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_signup"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="as"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/donator_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_3"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:onClick="donotorBtn">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donator"
                    android:textColor="#A6799F"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/donor"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ngo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_3"
                android:layout_weight="1"
                android:elevation="10dp"
                android:onClick="ngoBtn">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ngo"
                    android:textColor="#A6799F"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ngo"/>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:background="#00000000"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:elevation="5dp"/>


    </LinearLayout>
</ScrollView>