<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.login.Login"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="backBtn"
            android:padding="5dp"
            android:src="@drawable/back"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Enter Phone Number"
                android:id="@+id/log_in_phone"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                android:id="@+id/lig_in_password"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:buttonTint="@color/black"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                    android:visibility="gone"
                    android:id="@+id/log_in_progressbar"
                    />
                <Button
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:layout_alignParentEnd="true"/>



            </RelativeLayout>

            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:background="#00000000"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>



</ScrollView>