<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ngo_img"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/ngo_img"
                android:scaleType="centerCrop"
                android:src="@drawable/donate_1" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_1"
            android:layout_marginTop="-15dp">
            <TextView
                android:id="@+id/ngo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/ngo_name"
                android:textSize="20sp"
                android:layout_marginStart="15dp"/>
            <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ngo_name"
            android:text="@string/desc_1"
            android:textSize="10sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/join_us_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desc"
                android:text="Join us"
                android:textSize="15sp"
                android:textColor="#00FF55"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/donate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Donate"
                android:layout_below="@+id/desc"
                android:layout_toRightOf="@+id/join_us_btn"
                android:textSize="15sp"
                android:textColor="#FF0000"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>