<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserDashboard"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:layout_centerVertical="true"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            tools:ignore="ContentDescription,RtlHardcoded"
            android:onClick="getUserProfile"/>


    </RelativeLayout>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="32sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/app_name"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="15dp"
            android:background="@color/purple_200"
            android:elevation="8dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/Search"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap"
                app:iconifiedByDefault="false"

                android:hint="Search here"/>



        </RelativeLayout>


    </RelativeLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/card_2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="10dp">


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/card_1"
                    android:elevation="8dp"
                    android:foregroundGravity="center_horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/food"
                        android:src="@drawable/food"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/food"
                    android:textAlignment="center"
                    tools:ignore="VisualLintBounds" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/card_1"
                    android:elevation="8dp"
                    android:foregroundGravity="center_horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/cloths"
                        android:src="@drawable/cloth"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cloths"
                    android:textAlignment="center"
                    tools:ignore="VisualLintBounds" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/card_1"
                    android:elevation="8dp"
                    android:foregroundGravity="center_horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/books"
                        android:src="@drawable/books"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/books"
                    android:textAlignment="center"
                    tools:ignore="VisualLintBounds" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/card_1"
                    android:elevation="8dp"
                    android:foregroundGravity="center_horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/gadget"
                        android:src="@drawable/gadgets"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gadget"
                    android:textAlignment="center"
                    tools:ignore="VisualLintBounds" />

            </LinearLayout>



        </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:visibility="visible"
                    android:backgroundTint="@color/purple_200"
                    android:src="@drawable/plus"
                    android:contentDescription="addrequest"
                    android:layout_margin="16dp" />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featured_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp" />




    </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>